마이페이지 내 애완견 등록 수정.(살짝 수정 해야함)

--- a/project/src/main/resources/static/css/mypage.css
+++ b/project/src/main/resources/static/css/mypage.css
@@ -162,6 +162,11 @@ html, body {
     background-color: #2563eb;
 }
 
+/* 반려견 왼쪽 여백 */
+.pet-image-container {
+  margin-right: 30px;  
+}
+
 /* 반려견 추가 카드 */
 .add-pet-card {
     justify-content: center;
