--- a/project/src/main/resources/templates/fragments/link.html
+++ b/project/src/main/resources/templates/fragments/link.html
@@ -5,3 +5,7 @@
 <th:block th:fragment="mypage-link">
     <link rel="stylesheet" href="/css/mypage.css">
 </th:block>
+
+<th:block th:fragment="login-link">
+    <link rel="stylesheet" href="/css/login.css">
+</th:block>
