--- a/project/src/main/resources/templates/login/login.html
+++ b/project/src/main/resources/templates/login/login.html
@@ -7,6 +7,8 @@
     <title>Form 로그인</title>
     <!-- 공통 CSS -->
     <th:block th:replace="~{fragments/link::link}"></th:block>
+    <th:block th:replace="~{fragments/link::login-link}"></th:block>
+    
 
     <!-- Font Awesome 아이콘 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -18,65 +20,68 @@
     <!-- 헤더 -->
     <th:block th:replace="~{fragments/header::header}"></th:block>
 
-    <div class="container col-12 col-md-6 col-lg-4">
-
-
-        <div class="px-4 py-5 mt-5 text-center">
-            <h1 class="display-5 fw-bold text-body-emphasis">로그인</h1>
+    <section class="login-header">
+        <div class="login-header-inner">
+            <h2 class="mt-5 mb-2">로그인</h2>
+            <p class=" mb-4">계정에 로그인하여 계속하세요</p>
+            <div class="login-body">
+    
+                <!-- 로그인 영역 -->
+                <main class="form-signin login-box w-100 m-auto">
+                    <form action="/login" method="post">
+                        <!-- CSRF TOKEN -->
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                        
+                        <div class="form-floating mb-2">
+                            <input type="text" class="form-control" id="username" name="username" value="" placeholder="아이디"
+                                  autofocus th:value="${username}">
+                            <label for="username">아이디</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                            <label for="password">비밀번호</label>
+                        </div>
+            
+                        <div class="form-check text-start my-3 d-flex justify-content-around">
+                            <div class="item">
+                                <input class="form-check-input" type="checkbox" name="remember-id" id="remember-id-check" th:checked="${rememberId}">
+                                <label class="form-check-label" for="remember-id-check">아이디 저장</label>
+                            </div>
+                            <div class="item">
+                                <input class="form-check-input" type="checkbox" name="remember-me" id="remember-me-check">
+                                <label class="form-check-label" for="remember-me-check">자동 로그인</label>
+                            </div>
+            
+                        </div>
+        
+                        <!-- 로그인 에러 -->
+                        <th:block th:if="${param.error}">
+                            <p class="text-center text-danger">아이디 또는 비밀번호를 잘못 입력했습니다.</p>
+                        </th:block>
+                        <!-- 로그아웃 완료 -->
+                        <th:block th:if="${param.logout}">
+                            <p class="text-center text-success">정상적으로 로그아웃 되었습니다.</p>
+                        </th:block>
+        
+                        <!-- 버튼 -->
+                        <div class="d-grid gap-2">
+                            <button class="btn btn-lg btn-dark w-100 py-2 mb-3" type="submit">로그인</button>
+                            <div>
+                                <span class="no-count">계정이 없으신가요?</span>
+                                <a href="/join" class="signup-link mb-3">회원가입</a>
+                            </div>
+                        </div>
+        
+                    </form>
+                </main>
+            </div>
         </div>
-    
-        <!-- 로그인 영역 -->
-        <main class="form-signin login-box w-100 m-auto">
-            <form action="/login" method="post">
-                <!-- CSRF TOKEN -->
-                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="아이디"
-                          autofocus th:value="${username}">
-                    <label for="username">아이디</label>
-                </div>
-                <div class="form-floating">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
-                    <label for="password">비밀번호</label>
-                </div>
-    
-                <div class="form-check text-start my-3 d-flex justify-content-around">
-                    <div class="item">
-                        <input class="form-check-input" type="checkbox" name="remember-id" id="remember-id-check" th:checked="${rememberId}">
-                        <label class="form-check-label" for="remember-id-check">아이디 저장</label>
-                    </div>
-                    <div class="item">
-                        <input class="form-check-input" type="checkbox" name="remember-me" id="remember-me-check">
-                        <label class="form-check-label" for="remember-me-check">자동 로그인</label>
-                    </div>
-    
-                </div>
 
-                <!-- 로그인 에러 -->
-                <th:block th:if="${param.error}">
-                    <p class="text-center text-danger">아이디 또는 비밀번호를 잘못 입력했습니다.</p>
-                </th:block>
-                <!-- 로그아웃 완료 -->
-                <th:block th:if="${param.logout}">
-                    <p class="text-center text-success">정상적으로 로그아웃 되었습니다.</p>
-                </th:block>
+    </section>
 
-                <!-- 버튼 -->
-                <div class="d-grid gap-2">
-                    <button class="btn btn-lg btn-primary w-100 py-2" type="submit">로그인</button>
-                    <a href="/join" class="btn btn-lg btn-success w-100 py-2">회원가입</a>
-                    <hr>
-                </div>
-
-            </form>
-        </main>
-    </div>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- 푸터 -->
-    <th:block th:replace="~{fragments/footer::footer}"></th:block>
 </body>
 </html>
