--- a/project/src/main/resources/templates/notice/notice_list.html
+++ b/project/src/main/resources/templates/notice/notice_list.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>공지사항</title>
 
-    <!-- Bootstrap 5 CDN -->
+      <th:block th:replace="~{fragments/link::link}"></th:block>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -28,6 +29,7 @@
     </style>
 </head>
 <body>
+        <th:block th:replace="~{fragments/header::header}"></th:block>
 
 <div class="container py-5">
 
@@ -43,30 +45,17 @@
                 <tr>
                     <th style="width: 10%">번호</th>
                     <th style="width: 55%">제목</th>
-                    <th style="width: 15%">작성자</th>
                     <th style="width: 20%">작성일</th>
-                </tr>
+                </tr> 
                 </thead>
-                <tbody>
+                <tbody th:each="notice : ${noticeList}">
                 <tr>
-                    <td>3</td>
+                    <td th:text="${notice.no}"></td>
                     <td class="text-start ps-4">
-                        <a href="notice_view.html" class="notice-title">
-                            설 연휴 휴무 안내
+                        <a th:href="@{/noticedetail(no=${notice.no})}" class="notice-title" th:text="${notice.title}">
                         </a>
                     </td>
-                    <td>관리자</td>
-                    <td>2026-01-25</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td class="text-start ps-4">
-                        <a href="#" class="notice-title">
-                            신규 서비스 오픈 안내
-                        </a>
-                    </td>
-                    <td>관리자</td>
-                    <td>2026-01-20</td>
+                    <td th:text="${#dates.format(notice.regDate, 'yyyy-MM-dd HH:mm')}"></td>
                 </tr>
                 </tbody>
             </table>
