아이디, 비밀번호 찾기. 1

--- a/project/src/main/resources/templates/fragments/link.html
+++ b/project/src/main/resources/templates/fragments/link.html
@@ -9,3 +9,11 @@
 <th:block th:fragment="login-link">
     <link rel="stylesheet" href="/css/login.css">
 </th:block>
+
+<th:block th:fragment="join-link">
+    <link rel="stylesheet" href="/css/join.css">
+</th:block>
+
+<th:block th:fragment="find-link">
+    <link rel="stylesheet" href="/css/find.css">
+</th:block>
