--- a/project/src/main/resources/templates/login/login.html
+++ b/project/src/main/resources/templates/login/login.html
@@ -70,6 +70,9 @@
                                 <span class="no-count">계정이 없으신가요?</span>
                                 <a href="/join" class="signup-link mb-3">회원가입</a>
                             </div>
+                            <div>
+                                <a href="/find" class="signup-link mb-3">아이디/비밀번호 찾기</a>
+                            </div>
                         </div>
         
                     </form>
