--- a/project/src/main/resources/templates/login/join.html
+++ b/project/src/main/resources/templates/login/join.html
@@ -6,6 +6,7 @@
     <title>회원가입</title>
     <!-- 공통 CSS -->
     <th:block th:replace="~{fragments/link::link}"></th:block>
+    <th:block th:replace="~{fragments/link::join-link}"></th:block>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -13,64 +14,71 @@
     <!-- 헤더 -->
     <th:block th:replace="~{fragments/header::header}"></th:block>
 
-    <div class="container col-12 col-lg-4">
-        <div class="px-4 py-5 mt-5 text-center">
-            <h1 class="display-5 fw-bold text-body-emphasis">회원 가입</h1>
+    <section class="join-header">
+        <div class="join-header-inner">
+        
+                <div class="px-4 py-5 text-center">
+                    <h1 class="display-5 fw-bold text-body-emphasis">회원 가입</h1>
+                </div>
+
+                <main class="form-signin login-box w-100 m-auto">
+                    <form id="form" class="needs-validation">
+                        <!-- CSRF TOKEN -->
+                        <input type="hidden" id="csrfToken" th:value="${_csrf.token}">
+            
+                        <!-- 아이디 입력 + 중복확인 -->
+                        <div class="input-group my-2">
+                            <div class="form-floating" id="box-id">
+                                <input type="text" class="form-control mr-2" id="username" name="username" placeholder="아이디" autofocus>
+                                <label for="username">아이디</label>
+                            </div>
+                            <div class="input-group-append ms-2">
+                                <button type="button" class="btn btn-lg btn-outline-secondary h-100" onclick="checkId()">중복확인</button>
+                            </div>
+                        </div>
+            
+                        <!-- 나머지 폼 필드 -->
+                        <div class="form-floating my-2">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                            <label for="password">비밀번호</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="password" class="form-control" id="passwordCheck" name="passwordCheck" placeholder="비밀번호 확인">
+                            <label for="passwordCheck">비밀번호 확인</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="text" class="form-control" id="name" name="name" placeholder="이름">
+                            <label for="name">이름</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="text" class="form-control" id="address" name="address" placeholder="주소">
+                            <label for="address">주소</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="date" id="birth" class="form-control mb-2"/>
+                            <label for="birth">생년월일</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="text" class="form-control" id="email" name="email" placeholder="이메일">
+                            <label for="email">이메일</label>
+                        </div>
+                        <div class="form-floating my-2">
+                            <input type="text" class="form-control" id="phone" name="phone" placeholder="전화번호">
+                            <label for="phone">전화번호</label>
+                        </div>
+            
+                        <div class="d-grid gap-2">
+                            <button type="button" class="btn btn-lg btn-dark w-100 py-2" onclick="submitForm()">회원가입</button>
+                            <a href="/" class="btn btn-lg btn-success w-100 py-2 ">메인</a>
+                        </div>
+                    </form>
+                </main>
+
+
         </div>
+    </section>
 
-        <main class="form-signin login-box w-100 m-auto">
-            <form id="form" class="needs-validation">
-                <!-- CSRF TOKEN -->
-                <input type="hidden" id="csrfToken" th:value="${_csrf.token}">
 
-                <!-- 아이디 입력 + 중복확인 -->
-                <div class="input-group my-2">
-                    <div class="form-floating" id="box-id">
-                        <input type="text" class="form-control" id="username" name="username" placeholder="아이디" autofocus>
-                        <label for="username">아이디</label>
-                    </div>
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-lg btn-outline-secondary h-100" onclick="checkId()">중복확인</button>
-                    </div>
-                </div>
-
-                <!-- 나머지 폼 필드 -->
-                <div class="form-floating my-2">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
-                    <label for="password">비밀번호</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="password" class="form-control" id="passwordCheck" name="passwordCheck" placeholder="비밀번호 확인">
-                    <label for="passwordCheck">비밀번호 확인</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="이름">
-                    <label for="name">이름</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="text" class="form-control" id="address" name="address" placeholder="주소">
-                    <label for="address">주소</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="date" id="birth" class="form-control mb-2"/>
-                    <label for="birth">생년월일</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="이메일">
-                    <label for="email">이메일</label>
-                </div>
-                <div class="form-floating my-2">
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="전화번호">
-                    <label for="phone">전화번호</label>
-                </div>
-
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-lg btn-primary w-100 py-2" onclick="submitForm()">회원가입</button>
-                    <a href="/" class="btn btn-lg btn-success w-100 py-2">메인</a>
-                </div>
-            </form>
-        </main>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -113,18 +121,41 @@
         }
 
         // 회원가입 제출
-        async function submitForm() {
-            const isIdAvailable = await checkId();
-            if (!isIdAvailable) return;
-
+        window.submitForm = async function() {
+            const username = document.getElementById("username").value.trim();
             const password = document.getElementById("password").value;
             const passwordCheck = document.getElementById("passwordCheck").value;
-            if (password !== passwordCheck) {
-                alert("비밀번호가 일치하지 않습니다.");
+            const name = document.getElementById("name").value.trim();
+            const email = document.getElementById("email").value.trim();
+            const phone = document.getElementById("phone").value.trim();
+            const address = document.getElementById("address").value.trim();
+            const birth = document.getElementById("birth").value.trim();
+            
+            if (!username || !password || !passwordCheck || !name || !email || !phone || !address || !birth) {
+                alert("모든 필드를 채워주세요.");
                 return;
             }
 
+            if(password !== passwordCheck) {
+                alert("비밀번호가 일치하지 않습니다.")
+                return;
+            }
+            
+
+            const isIdAvailable = await checkId();
+            if (!isIdAvailable) return;
+
             const data = {
+                username,
+                password,
+                name,
+                address,
+                birth,
+                email,
+                phone
+            };
+            
+            /* const data = {
                 username: document.getElementById("username").value.trim(),
                 password: password,
                 name: document.getElementById("name").value.trim(),
@@ -132,7 +163,7 @@
                 birth: document.getElementById("birth").value.trim(),
                 email: document.getElementById("email").value.trim(),
                 phone: document.getElementById("phone").value.trim()
-            };
+            }; */
 
             try {
                 const response = await fetch('/api/users/join', {
